Migrate `angular-ui-bootstrap` to `ui-bootstrap4` and update HTML

--- a/examples/invoice/src/main/webapp/forms/assign-reviewer.html
+++ b/examples/invoice/src/main/webapp/forms/assign-reviewer.html
@@ -1,8 +1,8 @@
 <form class="form-horizontal"
       role="form">
 
-  <div class="control-group">
-    <label class="control-label">Creditor</label>
+  <div class="control-group mb-3">
+    <label class="form-label">Creditor</label>
     <div class="controls">
       <input cam-variable-name="creditor"
              type="text"
@@ -11,8 +11,8 @@
              class="form-control" />
     </div>
   </div>
-  <div class="control-group">
-    <label class="control-label">Amount</label>
+  <div class="control-group mb-3">
+    <label class="form-label">Amount</label>
     <div class="controls">
       <input cam-variable-name="amount"
              type="text"
@@ -21,8 +21,8 @@
              class="form-control" />
     </div>
   </div>
-  <div class="control-group">
-    <label class="control-label">Invoice Number</label>
+  <div class="control-group mb-3">
+    <label class="form-label">Invoice Number</label>
     <div class="controls">
       <input cam-variable-name="invoiceNumber"
              type="text"
@@ -31,8 +31,8 @@
              class="form-control" />
     </div>
   </div>
-  <div class="control-group">
-    <label class="control-label">Reviewer: </label>
+  <div class="control-group mb-3">
+    <label class="form-label">Reviewer: </label>
     <div class="controls">
       <select cam-variable-name="reviewer"
               cam-variable-type="String"
