--- a/examples/invoice/src/main/webapp/forms/review-invoice.html
+++ b/examples/invoice/src/main/webapp/forms/review-invoice.html
@@ -6,15 +6,15 @@
     This invoice needs clarification and could not be approved due to missing data.
   </p>
 
-  <div class="form-group">
-    <label class="control-label col-md-2">Invoice Document</label>
+  <div class="form-group mb-3">
+    <label class="form-label col-md-2">Invoice Document</label>
     <div class="form-control-static col-md-10">
       <a cam-file-download="invoiceDocument"></a>
     </div>
   </div>
 
-  <div class="form-group">
-    <label class="control-label col-md-2">Creditor</label>
+  <div class="form-group mb-3">
+    <label class="form-label col-md-2">Creditor</label>
     <div class="col-md-10">
       <input cam-variable-name="creditor"
              type="text"
@@ -23,8 +23,8 @@
     </div>
   </div>
 
-  <div class="form-group">
-    <label class="control-label col-md-2">Amount</label>
+  <div class="form-group mb-3">
+    <label class="form-label col-md-2">Amount</label>
     <div class="col-md-10">
       <input cam-variable-name="amount"
              type="text"
@@ -33,8 +33,8 @@
     </div>
   </div>
 
-  <div class="form-group">
-    <label class="control-label col-md-2">Invoice Category</label>
+  <div class="form-group mb-3">
+    <label class="form-label col-md-2">Invoice Category</label>
     <div class="col-md-10">
       <select cam-variable-name="invoiceCategory"
               class="form-control">
@@ -44,8 +44,8 @@
     </div>
   </div>
 
-  <div class="form-group">
-    <label class="control-label col-md-2">Invoice Number</label>
+  <div class="form-group mb-3">
+    <label class="form-label col-md-2">Invoice Number</label>
     <div class="col-md-10">
       <input cam-variable-name="invoiceNumber"
              type="text"
@@ -54,7 +54,7 @@
     </div>
   </div>
 
-  <div class="form-group">
+  <div class="form-group mb-3">
     <div class="col-md-10 col-md-offset-2">
       <div class="checkbox">
         <label>
