--- a/examples/invoice/src/main/webapp/forms/approve-invoice.html
+++ b/examples/invoice/src/main/webapp/forms/approve-invoice.html
@@ -3,15 +3,15 @@
 
   <p>Do you approve this invoice?</p>
 
-  <div class="form-group">
-    <label class="control-label col-md-2">Invoice Document</label>
+  <div class="form-group mb-3">
+    <label class="form-label col-md-2">Invoice Document</label>
     <div class="form-control-static col-md-10">
       <a cam-file-download="invoiceDocument"></a>
     </div>
   </div>
 
-  <div class="form-group">
-    <label class="control-label col-md-2">Creditor</label>
+  <div class="form-group mb-3">
+    <label class="form-label col-md-2">Creditor</label>
     <div class="col-md-10">
       <input cam-variable-name="creditor"
              type="text"
@@ -20,8 +20,8 @@
              class="form-control" />
     </div>
   </div>
-  <div class="form-group">
-    <label class="control-label col-md-2">Amount</label>
+  <div class="form-group mb-3">
+    <label class="form-label col-md-2">Amount</label>
     <div class="col-md-10">
       <input cam-variable-name="amount"
              type="text"
@@ -30,8 +30,8 @@
              class="form-control" />
     </div>
   </div>
-  <div class="form-group">
-    <label class="control-label col-md-2">Invoice Category</label>
+  <div class="form-group mb-3">
+    <label class="form-label col-md-2">Invoice Category</label>
     <div class="col-md-10">
       <input cam-variable-name="invoiceCategory"
              type="text"
@@ -40,8 +40,8 @@
              class="form-control" />
     </div>
   </div>
-  <div class="form-group">
-    <label class="control-label col-md-2">Invoice Number</label>
+  <div class="form-group mb-3">
+    <label class="form-label col-md-2">Invoice Number</label>
     <div class="col-md-10">
       <input cam-variable-name="invoiceNumber"
              type="text"
@@ -51,15 +51,15 @@
     </div>
   </div>
 
-  <div class="form-group">
-    <div class="col-md-10 col-md-offset-2">
+  <div class="form-group mb-3">
+    <div class="col-md-10">
       <div class="checkbox">
         <label>
           <input cam-variable-name="approved"
                  cam-variable-type="Boolean"
                  type="checkbox"
                  name="approved"
-                 class="form-control" />
+                 class="" />
           Do you approve?
         </label>
       </div>
