--- a/examples/invoice/src/main/webapp/forms/prepare-bank-transfer.html
+++ b/examples/invoice/src/main/webapp/forms/prepare-bank-transfer.html
@@ -3,15 +3,15 @@
 
   <p>Please prepare the bank transfer for the following invoice</p>
 
-  <div class="form-group">
-    <label class="control-label col-md-2">Invoice Document</label>
+  <div class="form-group mb-3">
+    <label class="form-label col-md-2">Invoice Document</label>
     <div class="form-control-static col-md-10">
       <a cam-file-download="invoiceDocument"></a>
     </div>
   </div>
 
-  <div class="form-group">
-    <label class="control-label col-md-2">Creditor</label>
+  <div class="form-group mb-3">
+    <label class="form-label col-md-2">Creditor</label>
     <div class="col-md-10">
       <input cam-variable-name="creditor"
              type="text"
@@ -20,8 +20,8 @@
              class="form-control" />
     </div>
   </div>
-  <div class="form-group">
-    <label class="control-label col-md-2">Amount</label>
+  <div class="form-group mb-3">
+    <label class="form-label col-md-2">Amount</label>
     <div class="col-md-10">
       <input cam-variable-name="amount"
              type="text"
@@ -30,8 +30,8 @@
              class="form-control" />
     </div>
   </div>
-  <div class="form-group">
-    <label class="control-label col-md-2">Invoice Number</label>
+  <div class="form-group mb-3">
+    <label class="form-label col-md-2">Invoice Number</label>
     <div class="col-md-10">
       <input cam-variable-name="invoiceNumber"
              type="text"
@@ -41,8 +41,8 @@
     </div>
   </div>
 
-  <div class="form-group">
-    <label class="control-label col-md-2">Approved by </label>
+  <div class="form-group mb-3">
+    <label class="form-label col-md-2">Approved by </label>
     <div class="col-md-10">
       <input cam-variable-name="approver"
              type="text"
