--- a/examples/invoice/src/main/webapp/forms/start-form.html
+++ b/examples/invoice/src/main/webapp/forms/start-form.html
@@ -1,8 +1,8 @@
 <form role="form" name="invoiceForm"
       class="form-horizontal">
 
-  <div class="form-group">
-    <label class="control-label col-md-4"
+  <div class="form-group mb-3">
+    <label class="form-label col-md-4"
            for="invoiceDocumentUpload">Upload your Invoice Document</label>
     <div class="col-md-8">
       <input type="file"
@@ -54,8 +54,8 @@
     </div>
   </div>
 
-  <div class="form-group">
-    <label class="control-label col-md-4"
+  <div class="form-group mb-3">
+    <label class="form-label col-md-4"
            for="amount">Amount</label>
     <div class="col-md-8">
       <input cam-variable-name="amount"
@@ -76,8 +76,8 @@
     </div>
   </div>
 
-  <div class="form-group">
-    <label class="control-label col-md-4"
+  <div class="form-group mb-3">
+    <label class="form-label col-md-4"
            for="amount">Invoice Category</label>
     <div class="col-md-8">
       <select cam-variable-name="invoiceCategory"
@@ -90,8 +90,8 @@
     </div>
   </div>
 
-  <div class="form-group">
-    <label class="control-label col-md-4"
+  <div class="form-group mb-3">
+    <label class="form-label col-md-4"
            for="invoiceNumber">Invoice Number</label>
     <div class="col-md-8">
       <input cam-variable-name="invoiceNumber"
