--- a/webapps/frontend/operaton-commons-ui/lib/widgets/variables-table/cam-widget-variables-table.html
+++ b/webapps/frontend/operaton-commons-ui/lib/widgets/variables-table/cam-widget-variables-table.html
@@ -203,7 +203,7 @@
                   uib-tooltip="{{ 'CAM_WIDGET_VARIABLES_TABLE_EDIT_VARIABLE' | translate }}">
             <span class="glyphicon glyphicon-pencil"></span>
           </button>
-          <button class="btn btn-xs btn-default"
+          <button class="btn btn-xs btn-outline-secondary"
                   ng-disabled="!canEditVariable(info, v)"
                   ng-click="deleteVariable(v)"
                   tooltip-append-to-body="true"
@@ -221,7 +221,7 @@
                   uib-tooltip="{{ 'CAM_WIDGET_VARIABLES_TABLE_SAVE_VARIABLE' | translate }}">
             <span class="glyphicon glyphicon-ok"></span>
           </button>
-          <button class="btn btn-xs btn-default"
+          <button class="btn btn-xs btn-outline-secondary"
                   ng-click="enableEditMode(info, false)"
                   tooltip-append-to-body="true"
                   uib-tooltip="{{ 'CAM_WIDGET_VARIABLES_TABLE_REVERT_VARIABLE' | translate }}">
