Migrate admin ui components and styles to Bootstrap 4

--- a/webapps/frontend/ui/admin/client/scripts/index.html
+++ b/webapps/frontend/ui/admin/client/scripts/index.html
@@ -51,7 +51,7 @@
      current-app="admin"
      ng-cloak>
   <ul cam-if-logged-in
-      ng-controller="NavigationController">
+      ng-controller="NavigationController" class="order-2">
 
     <li ng-class="activeClass('#/user')">
       <a href="#/users">{{ 'USERS_USERS' | translate }}</a>
