--- a/webapps/frontend/ui/admin/client/scripts/pages/dashboard.html
+++ b/webapps/frontend/ui/admin/client/scripts/pages/dashboard.html
@@ -1,5 +1,5 @@
 <div class="dashboard">
-  <div class="section-content sections">
+  <div class="section-content sections row">
     <section ng-repeat="plugin in dashboardPlugins"
              ng-if="!plugin.noDashboardSection && !!plugin.accessible"
              class="col-sm-4">
