--- a/webapps/frontend/ui/admin/client/scripts/pages/groups.html
+++ b/webapps/frontend/ui/admin/client/scripts/pages/groups.html
@@ -1,14 +1,14 @@
 <!-- # CE - operaton-bpm-webapp/ui/admin/client/scripts/pages/groups.html -->
 <section ng-cloak>
   <!-- <aside></aside> -->
-  <div class="section-content">
+  <div class="section-content container-fluid">
     <header class="row">
-      <div class="col-xs-8">
+      <div class="col-sm-8">
         <h3>{{ 'GROUPS_LIST_GROUPS' | translate }}</h3>
       </div>
-      <div class="col-xs-4 text-right">
+      <div class="col-sm-4 d-flex justify-content-end pb-2">
         <a href="#/group-create"
-           class="btn btn-default">
+           class="btn btn-light">
           {{ 'GROUPS_CREATE_GROUP' | translate }}
           <span class="glyphicon glyphicon-plus-sign"></span>
         </a>
