--- a/webapps/frontend/ui/admin/client/scripts/pages/setup.html
+++ b/webapps/frontend/ui/admin/client/scripts/pages/setup.html
@@ -4,7 +4,7 @@
   <div class="section-content"
        id="users"
        ng-switch on="created">
-    <header class="row">
+    <header class="row ml-0">
       <div class="col-xs-8">
         <h3>{{ 'SETUP_SETUP' | translate }}</h3>
       </div>
