--- a/webapps/frontend/ui/admin/client/scripts/pages/users.html
+++ b/webapps/frontend/ui/admin/client/scripts/pages/users.html
@@ -1,13 +1,13 @@
 <!-- # CE - operaton-bpm-webapp/ui/admin/client/scripts/pages/users.html -->
 <section ng-cloak>
   <!-- <aside></aside> -->
-  <div class="section-content">
+  <div class="section-content container-fluid">
     <header class="row">
-      <div class="col-xs-8">
+      <div class="col-sm-8">
         <h3>{{ 'USERS_LIST_OF_USERS' | translate }}</h3>
       </div>
-      <div class="col-xs-4 text-right">
-        <a class="btn btn-default"
+      <div class="col-sm-4 d-flex justify-content-end pb-2">
+        <a class="btn btn-light"
            href="#/user-create">
           {{ 'USERS_ADD_USER' | translate }}
           <span class="glyphicon glyphicon-plus-sign"></span>
