--- a/webapps/frontend/ui/admin/client/scripts/pages/authorizations.html
+++ b/webapps/frontend/ui/admin/client/scripts/pages/authorizations.html
@@ -9,15 +9,15 @@
     </ul>
   </aside>
 
-  <div class="section-content">
+  <div class="section-content container-fluid">
     <header class="row">
-      <div class="col-xs-8">
+      <div class="col-sm-8">
         <h3>{{title}} {{'AUTHORIZATION_AUTHORIZATIONS' | translate}}</h3>
       </div>
-      <div class="col-xs-4 text-right"
+      <div class="col-sm-4 d-flex justify-content-end pb-2"
            ng-controller="AuthorizationCreateController">
         <a ng-click="addNewAuthorization()"
-           class="btn btn-default"
+           class="btn btn-light"
            ng-hide="loadingState === 'LOADING'">
           {{ 'AUTHORIZATION_CREATE_NEW_AUTHORIZATION' | translate }}
           <span class="glyphicon glyphicon-plus-sign"></span>
@@ -110,7 +110,7 @@
 
                 <div class="input-group-btn dropdown" uib-dropdown auto-close="outsideClick">
                   <button type="button"
-                          class="btn btn-default dropdown-toggle"
+                          class="btn btn-light dropdown-toggle"
                           uib-dropdown-toggle
                           aria-expanded="false">
                     <span class="glyphicon glyphicon-pencil"></span>
@@ -184,7 +184,7 @@
                   <span class="glyphicon glyphicon-ok "></span>
                 </button>
 
-                <a class="btn btn-default"
+                <a class="btn btn-light"
                    ng-click="cancelUpdateAuthorization(authorization)">
                   <span class="glyphicon glyphicon-ban-circle"></span>
                 </a>
