--- a/webapps/frontend/ui/admin/client/scripts/pages/execution-metrics.html
+++ b/webapps/frontend/ui/admin/client/scripts/pages/execution-metrics.html
@@ -1,13 +1,13 @@
-<form class="execution-metrics" name="form">
+<form class="execution-metrics container-fluid" name="form">
 
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-sm-12">
       <h3>{{ 'EXECUTION_METRICS' | translate }}</h3>
     </div>
   </div>
 
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-sm-12">
       <div uib-alert class="alert alert-info">
         <p>
           {{ 'EXECUTION_METRICS_INFO_1' | translate }}
@@ -27,7 +27,7 @@
   </div>
 
   <div class="row">
-    <div class="form-group col-xs-12">
+    <div class="form-group col-sm-12">
       <label for="startDate">
         {{ 'EXECUTION_METRICS_START_DATE' | translate }}
       </label>
@@ -47,12 +47,12 @@
   </div>
 
   <div class="row">
-    <div class="col-xs-8">
+    <div class="col-sm-8">
       <h4 class="pull-left">
         {{ 'EXECUTION_METRICS_MONTHLY_TABLE_TITLE' | translate }}
       </h4>
     </div>
-    <div class="col-xs-4">
+    <div class="col-sm-4 text-right">
       <div class="pull-right">
         <label class="checkbox">
           <input type="checkbox" ng-model="displayLegacyMetrics">
@@ -63,11 +63,11 @@
   </div>
 
   <div class="row">
-    <div class="col-xs-12 monthly-metrics-chart"
+    <div class="col-sm-12 monthly-metrics-chart"
          ng-style="{display: loadingStateMonthly === 'LOADED' ? 'block' : 'none'}">
       <canvas id="monthly-metrics-chart-canvas"></canvas>
     </div>
-    <div class="col-xs-12">
+    <div class="col-sm-12">
       <div cam-widget-loader
            loading-state="{{ loadingStateMonthly }}"
            text-error="{{ loadingErrorMonthly }}">
@@ -103,13 +103,13 @@
   </div>
 
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-sm-12">
       <h4>{{ 'EXECUTION_METRICS_ANNUAL_TABLE_TITLE' | translate }}</h4>
     </div>
   </div>
 
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-sm-12">
       <div cam-widget-loader
            loading-state="{{ loadingStateAnnual }}"
            text-error="{{ loadingErrorAnnual }}"
