--- a/webapps/frontend/ui/admin/client/scripts/pages/groupCreate.html
+++ b/webapps/frontend/ui/admin/client/scripts/pages/groupCreate.html
@@ -1,15 +1,15 @@
 <!-- # CE - operaton-bpm-webapp/ui/admin/client/scripts/pages/groupCreate.html -->
 <section>
-  <div class="section-content">
+  <div class="section-content container-fluid">
     <header class="row">
-      <div class="col-xs-8">
+      <div class="col-sm-8">
         <h3>{{ 'GROUP_CREATE_NEW_GROUP' | translate }}</h3>
       </div>
     </header>
 
     <form class="form-horizontal"
           name="createGroupForm">
-      <div class="col-xs-12">
+      <div class="col-sm-12">
         <div class="form-group">
           <label class="control-label col-sm-4 col-md-2"
                  for="inputGroupId">{{ 'GROUP_CREATE_GROUP_ID' | translate }}</label>
