--- a/webapps/frontend/ui/admin/client/scripts/pages/groupEdit.html
+++ b/webapps/frontend/ui/admin/client/scripts/pages/groupEdit.html
@@ -14,14 +14,14 @@
     </ul>
   </aside>
 
-  <div class="section-content">
+  <div class="section-content container-fluid">
     <header class="row">
-      <div class="col-xs-8">
+      <div class="col-sm-8">
         <h3 translate="GROUP_EDIT_EDIT_GROUP"
             translate-values="{ group: group.name }"></h3>
       </div>
-      <div class="col-xs-4 text-right">
-        <a class="btn btn-default"
+      <div class="col-sm-4 text-right">
+        <a class="btn btn-light"
            ng-if="show('tenants')"
            ng-click="openCreateTenantMembershipDialog()">
            {{ 'GROUP_EDIT_ADD_TO_TENANT' | translate }}
