--- a/webapps/frontend/ui/admin/client/scripts/pages/tenantCreate.html
+++ b/webapps/frontend/ui/admin/client/scripts/pages/tenantCreate.html
@@ -1,15 +1,15 @@
 <!-- # CE - operaton-admin-ui/client/scripts/pages/tenantCreate.html -->
 <section>
-  <div class="section-content">
+  <div class="section-content container-fluid">
     <header class="row">
-      <div class="col-xs-8">
+      <div class="col-sm-8">
         <h3> {{ 'TENANTS_CREATE_TENANT' | translate }}</h3>
       </div>
     </header>
 
     <form class="form-horizontal"
           name="createTenantForm">
-      <div class="col-xs-12">
+      <div class="col-sm-12">
         <div class="form-group">
           <label class="control-label col-sm-4 col-md-2"
                  for="inputTenantId">{{ 'TENANTS_TENANT_ID' | translate }}</label>
