--- a/webapps/frontend/ui/cockpit/client/scripts/index.html
+++ b/webapps/frontend/ui/cockpit/client/scripts/index.html
@@ -43,7 +43,7 @@
           type="text/css"
           href="<%= htmlWebpackPlugin.options.appRoot %>/app/cockpit/styles/user-styles.css?bust=<%= htmlWebpackPlugin.options.version %>">
   </head>
-  <body>
+  <body class="no-breadcrumbs">
     <!-- navigation -->
     <div cam-widget-header
          class="Header"
