--- a/webapps/frontend/ui/cockpit/client/scripts/pages/process-definition.html
+++ b/webapps/frontend/ui/cockpit/client/scripts/pages/process-definition.html
@@ -34,7 +34,7 @@
 
               <a href
                  uib-dropdown-toggle
-                 class="dropdown-toggle btn btn-xs btn-default">
+                 class="dropdown-toggle btn btn-xs btn-outline-secondary">
                 <span class="caret"></span>
               </a>
             </span>
