--- a/webapps/frontend/ui/cockpit/client/scripts/directives/time-to-live/time-to-live-dialog.html
+++ b/webapps/frontend/ui/cockpit/client/scripts/directives/time-to-live/time-to-live-dialog.html
@@ -14,49 +14,49 @@
   <div ng-show="status === 'SUCCESS'" class="alert alert-info">
     <p>
       {{ 'TIME_TO_LIVE_POPUP_REMOVAL_TIME_NOT_UPDATED_INFO' | translate }}
-      
-      <span ng-show="showLinkToBatchProcess"> 
+
+      <span ng-show="showLinkToBatchProcess">
         {{ 'TIME_TO_LIVE_POPUP_RUN_BATCH_JOB_INFO' | translate }}
       </span>
     </p>
   </div>
 
-  <div ng-show="!status" class="container-fluid">
+  <div ng-show="!status" class="">
 
-    <form class="form-inline">
+    <form class="">
 
-      <div class="row" style="margin-bottom: 20px;">
-        <div class="col-xs-12">
+      <div class="row pb-4">
+        <div class="col-12">
           {{ 'TIME_TO_LIVE_POPUP_SUBTITLE' | translate }}
         </div>
       </div>
 
-      <div class="row" style="margin-bottom: 10px;">
-        <label class="col-xs-4 text-right" for="ttl_dialog_input_remove">
+      <div class="row" style="">
+        <label class="col-sm-5 col-4 text-right" for="ttl_dialog_input_remove">
           {{ 'TIME_TO_LIVE_POPUP_RADIO_CLEAR' | translate }}
           <span class="glyphicon glyphicon-question-sign" tooltip-placement="right"
                 uib-tooltip="{{ 'TIME_TO_LIVE_POPUP_RADIO_CLEAR_TOOLTIP' | translate }}"></span>
         </label>
-        <div class="col-xs-8">
+        <div class="col-sm-7 col-8">
           <input id="ttl_dialog_input_remove" type="radio" ng-model="mode" ng-value="'REMOVE'"/>
         </div>
       </div>
 
-      <div class="row" style="margin-bottom: 10px;">
-        <label class="col-xs-4 text-right" for="ttl_dialog_input_value">
+      <div class="row justify-content-start" style="">
+        <label class="col-sm-5 col-4 text-right" for="ttl_dialog_input_value">
           {{ 'TIME_TO_LIVE_POPUP_RADIO_UPDATE' | translate }}
           <span class="glyphicon glyphicon-question-sign" tooltip-placement="right"
                 uib-tooltip="{{ 'TIME_TO_LIVE_POPUP_RADIO_UPDATE_TOOLTIP' | translate }}"></span>
         </label>
-        <div class="col-xs-8">
+        <div class="col-sm-7 col-8">
           <input id="ttl_dialog_input_value" type="radio" ng-model="mode" ng-value="'UPDATE'"/>
         </div>
       </div>
       <div ng-show="mode === 'UPDATE'" class="row" style="margin-bottom: 10px;">
-        <label class="col-xs-4 text-right">
+        <label class="col-sm-5 col-4 text-right">
           {{ 'DECISION_DEFINITION_HISTORY_TIME_TO_LIVE' | translate }}
         </label>
-        <div class="col-xs-8">
+        <div class="col-sm-7 col-8">
           <label>
             <input type="number" min="0" step="1" ng-model="ttl" ng-change="validate()" />
             {{ 'TIME_TO_LIVE_DAYS' | translate }}
@@ -82,8 +82,7 @@
 </div>
 
 <div class="modal-footer">
-
-  <div ng-show="!status" class="container-fluid">
+  <div ng-show="!status" class="text-right">
     <button class="btn btn-link" ng-click="close(null)">{{ 'CLOSE' | translate }}</button>
     <button type="submit"
             class="btn btn-primary"
@@ -92,22 +91,21 @@
     </button>
   </div>
 
-  <div ng-show="status === 'SUCCESS' && showLinkToBatchProcess" class="container-fluid">
+  <div ng-show="status === 'SUCCESS' && showLinkToBatchProcess" class="text-right">
     <button class="btn btn-link" ng-click="close(true)">{{ 'CLOSE' | translate }}</button>
     <button type="submit"
-      class="btn btn-primary"
-      ng-click="openBatchOperation()">
+            class="btn btn-primary"
+            ng-click="openBatchOperation()">
       {{ 'TIME_TO_LIVE_POPUP_BTN_OPEN' | translate}}
     </button>
   </div>
 
-  <div ng-show="status === 'SUCCESS' && !showLinkToBatchProcess">
+  <div ng-show="status === 'SUCCESS' && !showLinkToBatchProcess" class="text-right">
     <button class="btn btn-primary" ng-click="close(true)">{{ 'OK' | translate }}</button>
   </div>
 
-  <div ng-show="status === 'FAIL'" class="container-fluid">
+  <div ng-show="status === 'FAIL'" class="text-right">
     <button class="btn btn-primary" ng-click="close(null)">{{ 'OK' | translate }}</button>
   </div>
-
 </div>
 <!-- / CE - operaton-bpm-webapp/ui/cockpit/client/scripts/components/ttl/time-to-live-dialog.html -->
