--- a/webapps/frontend/ui/cockpit/plugins/jobDefinition/app/actions/override-job-priority/override-job-priority-dialog.html
+++ b/webapps/frontend/ui/cockpit/plugins/jobDefinition/app/actions/override-job-priority/override-job-priority-dialog.html
@@ -18,8 +18,8 @@
 
       <fieldset>
 
-        <div class="form-group" ng-show="hasOverridingJobPriority()">
-          <label class="col-xs-4 control-label"
+        <div class="form-group row" ng-show="hasOverridingJobPriority()">
+          <label class="col-sm-5 col-4 control-label"
                  for="execute">
             {{ 'PLUGIN_JOBDEFINITION_ACTION_EXECUTE' | translate }}
             <span class="glyphicon glyphicon-question-sign"
@@ -28,7 +28,7 @@
             </span>
           </label>
 
-          <div class="col-xs-8">
+          <div class="col-sm-7 col-8">
             <div class="radio">
               <label>
                 <input ng-model="setJobPriority"
@@ -51,8 +51,8 @@
           </div>
         </div>
 
-        <div class="form-group" ng-show="setJobPriority">
-          <label class="col-xs-4 control-label"
+        <div class="form-group row" ng-show="setJobPriority">
+          <label class="col-sm-5 col-4 control-label"
                  for="priority">
             {{ 'PLUGIN_JOBDEFINITION_ACTION_PRIORITY' | translate }}
             <span class="glyphicon glyphicon-question-sign"
@@ -61,7 +61,7 @@
             </span>
           </label>
 
-          <div class="col-xs-8">
+          <div class="col-sm-7 col-8">
             <input name="priority"
                    ng-model="data.priority"
                    class="form-control"
@@ -74,8 +74,8 @@
           </div>
         </div>
 
-        <div class="form-group" ng-show="setJobPriority">
-          <label class="col-xs-4 control-label"
+        <div class="form-group row" ng-show="setJobPriority">
+          <label class="col-sm-5 col-4 control-label"
                  for="includeJobsPriority">
             {{ 'PLUGIN_JOBDEFINITION_ACTION_INCLUDE_EXISTING_JOB' | translate }}
             <span class="glyphicon glyphicon-question-sign"
@@ -84,7 +84,7 @@
             </span>
           </label>
 
-          <div class="col-xs-8 checkbox">
+          <div class="col-sm-7 col-8 checkbox">
             <label>
               <input name="includeJobsPriority"
                      type="checkbox"
