Migrate tasklist ui components and styles to Bootstrap 4

--- a/webapps/frontend/ui/tasklist/client/scripts/index.html
+++ b/webapps/frontend/ui/tasklist/client/scripts/index.html
@@ -86,7 +86,7 @@
       <div class="task-actions"
            ng-show="task"
            ng-repeat="taskAction in taskActions">
-        <view provider="taskAction" vars="taskVars">
+        <view provider="taskAction" vars="taskVars"></view>
       </div>
     </header>
 
