--- a/webapps/frontend/ui/tasklist/client/scripts/task/directives/cam-tasklist-task.html
+++ b/webapps/frontend/ui/tasklist/client/scripts/task/directives/cam-tasklist-task.html
@@ -16,7 +16,7 @@
            class="task-card"
            ng-class="{'task-removed': !taskExists}">
     <header class="row">
-      <div class="col-xs-12">
+      <div class="col-12">
         <div class="tenant-id"
              ng-if="task.tenantId"
              uib-tooltip="{{ task.tenantId }}">
@@ -53,10 +53,10 @@
 
     <div class="task-removed-alert">
       <div uib-alert class="alert alert-info row">
-        <div class="col-xs-8 text-padded">
+        <div class="col-8 text-padded">
           {{ 'TASK_HAS_BEEN_REMOVED' | translate }}
         </div>
-        <div class="col-xs-4 text-right">
+        <div class="col-4 text-right">
           <button class="btn btn-default"
                   ng-click="dismissTask()">{{ 'CLOSE_TASK' | translate }}</button>
         </div>
@@ -65,7 +65,7 @@
 
     <div class="row tabbed-content">
 
-      <div ng-show="taskDetailTabs.length" class="col-xs-12">
+      <div ng-show="taskDetailTabs.length" class="col-12">
         <ul class="nav nav-tabs">
           <li ng-class="{ active: selectedTaskDetailTab.id === taskDetailTab.id }" ng-repeat="taskDetailTab in taskDetailTabs">
             <a href ng-click="selectTaskDetailTab(taskDetailTab)">{{ taskDetailTab.label | translate }}</a>
