--- a/webapps/frontend/ui/tasklist/client/scripts/task/plugins/detail/cam-tasklist-task-detail-history-plugin.html
+++ b/webapps/frontend/ui/tasklist/client/scripts/task/plugins/detail/cam-tasklist-task-detail-history-plugin.html
@@ -17,7 +17,7 @@
     <div ng-if="days.length"
          class="day row"
          ng-repeat="day in days | orderBy:'-date'">
-      <div class="col-xs-2">
+      <div class="col-2">
         <div class="date-badge">
           <div>
             <span class="day">{{ day.date | camDate:'day' }}</span>
@@ -27,10 +27,10 @@
         </div>
       </div>
 
-      <div class="col-xs-10">
+      <div class="col-10">
         <div class="instant row"
              ng-repeat="event in day.events | orderBy:'-time'">
-          <div class="col-xs-2 operation-meta">
+          <div class="col-2 operation-meta">
             <div class="operation-time"
                  tooltip-placement="left"
                  uib-tooltip="{{ event.time | camDate:'long' }}">{{ event.time | date:'HH:mm' }}</div>
@@ -39,18 +39,18 @@
                  uib-tooltip="{{ event.userId }}">{{ event.userId }}</div>
           </div>
 
-          <div class="col-xs-10 operation-detail">
+          <div class="col-10 operation-detail">
             <div class="row">
-              <h4 class="col-xs-12">{{ event.type | translate }}</h4>
+              <h4 class="col-12">{{ event.type | translate }}</h4>
             </div>
 
-            <div class="row event-body">
-              <div class="line"
+            <div class="event-body">
+              <div class="row line"
                    ng-repeat="subEvent in event.subEvents"
                    ng-if="event.type !== 'Comment'">
-                <h5 class="col-sm-12 col-md-3 event-property">{{ subEvent.property | translate }}</h5>
+                <h5 class="col-md-12 col-lg-3 event-property">{{ subEvent.property | translate }}</h5>
 
-                <div class="col-sm-12 col-md-9">
+                <div class="col-md-12 col-lg-9">
                   <div class="new-value" ng-if="subEvent.newValue">
                     <span ng-if="subEvent.propertyIsDate">{{ subEvent.newValue | camDate }}</span>
                     <span ng-if="!subEvent.propertyIsDate">{{ subEvent.newValue }}</span>
@@ -63,7 +63,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-xs-12"
+              <div class="col-12"
                    ng-if="event.type === 'Comment'"
                    nl2br="event.message"></div>
             </div>
