--- a/webapps/frontend/ui/welcome/client/scripts/pages/welcome.html
+++ b/webapps/frontend/ui/welcome/client/scripts/pages/welcome.html
@@ -1,18 +1,18 @@
 <div class="row welcome-page">
-  <div class="col-sm-8 col-xs-12">
+  <div class="col-md-8 col-sm-12">
     <section ng-init="authorized = $root.authentication.authorizedApps"
              class="webapps">
       <div class="inner"
            ng-init="cols = columnWidth()">
         <div class="row">
-          <div class="col-xs-12">
+          <div class="col-sm-12">
             <h3 class="section-title">{{'APPLICATIONS' | translate}}</h3>
           </div>
         </div>
 
         <div class="row">
           <div ng-if="canAccessApp('cockpit')"
-               ng-class="'col-xs-' + cols"
+               ng-class="'col-sm-' + cols"
                class="cockpit-app">
             <a class="app-label-wrapper"
                ng-href="{{ (':appRoot/app/cockpit/:engine/') | uri }}">
@@ -24,7 +24,7 @@
 
 
           <div ng-if="canAccessApp('tasklist')"
-               ng-class="'col-xs-' + cols"
+               ng-class="'col-sm-' + cols"
                class="tasklist-app">
             <a class="app-label-wrapper"
                ng-href="{{ (':appRoot/app/tasklist/:engine/') | uri }}">
@@ -36,7 +36,7 @@
 
 
           <div ng-if="canAccessApp('admin')"
-               ng-class="'col-xs-' + cols"
+               ng-class="'col-sm-' + cols"
                class="admin-app">
             <a class="app-label-wrapper"
                ng-href="{{ (':appRoot/app/admin/:engine/') | uri }}">
@@ -56,7 +56,7 @@
 
 
   <section ng-if="profilePlugins.length"
-           class="col-sm-4 col-xs-12"
+           class="col-md-4 col-sm-12"
            id="user-profile">
     <div class="inner">
       <view ng-repeat="plugin in profilePlugins"
@@ -68,7 +68,7 @@
   </section>
 
   <div ng-if="plugins.length"
-       class="col-xs-12 plugins">
+       class="col-sm-12 plugins">
     <div class="row">
       <view ng-repeat="plugin in plugins"
             class="plugin"
