chore(invoice-example): Remove implicit role attribute from form elements
Resolves Sonar issues of type Web:S6822:
  No redundant ARIA role

--- a/examples/invoice/src/main/webapp/forms/start-form.html
+++ b/examples/invoice/src/main/webapp/forms/start-form.html
@@ -1,5 +1,4 @@
-<form role="form" name="invoiceForm"
-      class="form-horizontal">
+<form name="invoiceForm" class="form-horizontal">
 
   <div class="form-group">
     <label class="control-label col-md-4"
