--- a/examples/invoice/src/main/webapp/forms/assign-reviewer.html
+++ b/examples/invoice/src/main/webapp/forms/assign-reviewer.html
@@ -1,5 +1,4 @@
-<form class="form-horizontal"
-      role="form">
+<form class="form-horizontal">
 
   <div class="control-group">
     <label class="control-label">Creditor</label>
