--- a/examples/invoice/src/main/webapp/forms/prepare-bank-transfer.html
+++ b/examples/invoice/src/main/webapp/forms/prepare-bank-transfer.html
@@ -1,5 +1,4 @@
-<form class="form-horizontal"
-      role="form">
+<form class="form-horizontal">
 
   <p>Please prepare the bank transfer for the following invoice</p>
 
