--- a/examples/invoice/src/main/webapp/forms/review-invoice.html
+++ b/examples/invoice/src/main/webapp/forms/review-invoice.html
@@ -1,5 +1,4 @@
-<form class="form-horizontal"
-      role="form">
+<form class="form-horizontal">
 
   <p>
     <strong>Please clarify:</strong><br/>
