Fix further UI issues

--- a/webapps/assembly/src/main/webapp/develop/forms/hello-track-start-form.html
+++ b/webapps/assembly/src/main/webapp/develop/forms/hello-track-start-form.html
@@ -3,7 +3,7 @@
       name="variablesForm">
   <div class="row">
     <div class="form-group">
-      <div class="col-xs-12">
+      <div class="col-12">
       <h2>Long Var</h2>
         <label class="control-label col-md-4"
                for="inputLongVar">Long Var</label>
