--- a/webapps/frontend/ui/tasklist/client/scripts/filter/directives/cam-tasklist-filter-modal-form-variable.html
+++ b/webapps/frontend/ui/tasklist/client/scripts/filter/directives/cam-tasklist-filter-modal-form-variable.html
@@ -9,41 +9,41 @@
 
 
   <div class="row labels-left">
-    <div class="col-xs-12">
+    <div class="col-12">
       <div class="undefined-variable checkbox">
         <label>
           <input type="checkbox"
-                 class="form-control"
+                 class="form-check-input"
                  ng-model="filter.properties.showUndefinedVariable" />
           {{ 'FILTER_FORM_VARIABLES_SHOW_UNDEFINED' | translate }}
         </label>
       </div>
     </div>
 
-    <div class="col-xs-2 row-action" ng-show="!filter.id || (filter.id && accesses.update)">
-      <a ng-click="addVariable()"
+    <div class="col-2" ng-show="!filter.id || (filter.id && accesses.update)">
+      <a ng-click="addVariable()" class="d-inline-flex text-nowrap"
          href>
-        <span class="hidden-sm hidden-xs">{{ 'FILTER_ADD_VARIABLE' | translate }}</span>
-        <span class="glyphicon glyphicon-plus-sign"></span>
+        <span class="d-none d-md-inline mr-1">{{ 'FILTER_ADD_VARIABLE' | translate }}</span>
+        <span class="glyphicon glyphicon-plus-sign mt-0 align-middle"></span>
       </a>
     </div>
 
-    <div ng-class="{ 'col-xs-10': !filter.id || (filter.id && accesses.update) , 'col-xs-12': !(!filter.id || (filter.id && accesses.update)) }">
-      <div class="form-group" ng-show="variables.length">
-        <label class="col-xs-6 control-label"
+    <div ng-class="{ 'col-10': !filter.id || (filter.id && accesses.update) , 'col-12': !(!filter.id || (filter.id && accesses.update)) }">
+      <div class="form-group row" ng-show="variables.length">
+        <label class="col-6 control-label"
                translate="FILTER_VARIABLE_NAME">Name</label>
-        <label class="col-xs-6 control-label"
+        <label class="col-6 control-label"
                translate="FILTER_VARIABLE_LABEL">Label</label>
       </div>
     </div>
   </div>
 
-  <div ng-repeat="(delta, variable) in variables" class="row">
+  <div ng-repeat="(delta, variable) in variables">
 
-    <div ng-form name="variableFieldForm">
+    <div ng-form name="variableFieldForm" class="row">
       <div ng-init="addForm(this.variableFieldForm)"></div>
 
-      <div class="col-xs-2 row-action" ng-show="!filter.id || (filter.id && accesses.update)">
+      <div class="col-2" ng-show="!filter.id || (filter.id && accesses.update)">
         <a ng-click="removeVariable(delta)"
            href>
           <span class="hidden-sm hidden-xs">{{ 'FILTER_REMOVE_VARIABLE' | translate }}</span>
@@ -52,10 +52,10 @@
       </div>
 
 
-      <div ng-class="{ 'col-xs-10': !filter.id || (filter.id && accesses.update) , 'col-xs-12': !(!filter.id || (filter.id && accesses.update)) }">
-        <div class="form-group">
+      <div ng-class="{ 'col-10': !filter.id || (filter.id && accesses.update) , 'col-12': !(!filter.id || (filter.id && accesses.update)) }">
+        <div class="form-group row">
 
-          <div class="col-xs-6">
+          <div class="col-6">
 
             <input class="form-control"
                    type="text"
@@ -75,7 +75,7 @@
 
           </div>
 
-          <div class="col-xs-6">
+          <div class="col-6">
             <input class="form-control"
                    type="text"
                    name="variableLabel"
