--- a/webapps/frontend/ui/tasklist/client/scripts/filter/modals/cam-tasklist-filter-modal.html
+++ b/webapps/frontend/ui/tasklist/client/scripts/filter/modals/cam-tasklist-filter-modal.html
@@ -36,7 +36,7 @@
 
   <div class="row row-action">
 
-    <div class="col-xs-4 align-left">
+    <div class="col-4 align-left">
 
       <button ng-show="!deletion && filter.id && accesses.delete"
               class="btn btn-link"
@@ -52,9 +52,9 @@
               translate="FILTER_EDIT">Edit filter</button>
     </div>
 
-    <div class="col-xs-8">
+    <div class="col-8">
       <div class="row">
-        <div class="col-xs-12">
+        <div class="col-12">
 
           <button class="btn btn-link"
                   type="button"
