--- a/webapps/frontend/ui/tasklist/plugins/standaloneTask/app/navbar/action/modals/cam-tasklist-create-task-modal.html
+++ b/webapps/frontend/ui/tasklist/plugins/standaloneTask/app/navbar/action/modals/cam-tasklist-create-task-modal.html
@@ -14,8 +14,8 @@
 
     <div class="form-group">
       <label for="filter-form-color"
-             class="col-xs-2 control-label">{{ 'NEW_TASK_NAME' | translate }}</label>
-      <div class="col-xs-10">
+             class="col-2 control-label">{{ 'NEW_TASK_NAME' | translate }}</label>
+      <div class="col-10">
         <input class="form-control"
                name="taskName"
                ng-model="task.name"
@@ -33,8 +33,8 @@
 
     <div class="form-group">
       <label for="filter-form-color"
-             class="col-xs-2 control-label">{{ 'NEW_TASK_ASSIGNEE' | translate }}</label>
-      <div class="col-xs-10">
+             class="col-2 control-label">{{ 'NEW_TASK_ASSIGNEE' | translate }}</label>
+      <div class="col-10">
         <input class="form-control"
                name="taskAssignee"
                ng-model="task.assignee"
@@ -44,8 +44,8 @@
 
     <div class="form-group">
       <label for="filter-form-color"
-             class="col-xs-2 control-label">{{ 'NEW_TASK_TENANT_ID' | translate }}</label>
-      <div class="col-xs-10">
+             class="col-2 control-label">{{ 'NEW_TASK_TENANT_ID' | translate }}</label>
+      <div class="col-10">
         <input class="form-control"
           name="taskTenantId"
           ng-model="task.tenantId"
@@ -55,8 +55,8 @@
 
     <div class="form-group">
       <label for="filter-form-color"
-             class="col-xs-2 control-label">{{ 'NEW_TASK_DESCRIPTION' | translate }}</label>
-      <div class="col-xs-10">
+             class="col-2 control-label">{{ 'NEW_TASK_DESCRIPTION' | translate }}</label>
+      <div class="col-10">
         <textarea class="form-control"
                   name="taskDescription"
                   ng-model="task.description"
@@ -72,7 +72,7 @@
 <div class="modal-footer">
   <div class="row row-action">
 
-    <div class="col-xs-12">
+    <div class="col-12">
       <button class="btn btn-xs btn-link"
               type="button"
               ng-click="$dismiss()">
