--- a/webapps/frontend/ui/tasklist/plugins/tasklistCard/app/variables/modals/cam-tasklist-variables-detail-modal.html
+++ b/webapps/frontend/ui/tasklist/plugins/tasklistCard/app/variables/modals/cam-tasklist-variables-detail-modal.html
@@ -58,7 +58,7 @@
 
 <div class="modal-footer">
   <div class="row row-action">
-    <div class="col-xs-12">
+    <div class="col-12">
       <button class="btn btn-xs btn-link"
               type="submit"
               ng-click="$dismiss()"
