--- a/webapps/frontend/ui/admin/client/scripts/pages/generic-confirmation.html
+++ b/webapps/frontend/ui/admin/client/scripts/pages/generic-confirmation.html
@@ -6,11 +6,11 @@
 </div>
 <div class="modal-footer">
   <div class="row">
-    <div class="col-xs-6 text-left">
+    <div class="col-6 text-left">
       <button class="btn btn-link"
               ng-click="$dismiss()">{{ 'GENERIC_CONFIRMATION_CANCEL' | translate }}</button>
     </div>
-    <div class="col-xs-6 text-right">
+    <div class="col-6 text-right">
       <button class="btn btn-primary"
               ng-click="delete()">{{ 'GENERIC_CONFIRMATION_PROCEED' | translate }}</button>
     </div>
