--- a/webapps/frontend/ui/admin/client/scripts/pages/groupEdit.html
+++ b/webapps/frontend/ui/admin/client/scripts/pages/groupEdit.html
@@ -37,8 +37,8 @@
           loading-state="{{ groupLoadingState }}">
       <div class="h4">{{ 'GROUP_EDIT_GROUP_DETAILS' | translate }}</div>
 
-      <div class="form-group">
-        <label class="control-label col-sm-4 col-md-2"
+      <div class="form-group row">
+        <label class="control-label col-sm-4 col-md-2 text-right"
                for="inputName">{{ 'GROUP_EDIT_GROUP_NAME' | translate }}</label>
 
         <div class="col-sm-8 col-md-10">
@@ -57,8 +57,8 @@
         </div>
       </div>
 
-      <div class="form-group">
-        <label class="control-label col-sm-4 col-md-2"
+      <div class="form-group row">
+        <label class="control-label col-sm-4 col-md-2 text-right"
                for="inputType">{{ 'GROUP_EDIT_GROUP_TYPE' | translate }}</label>
 
         <div class="col-sm-8 col-md-10">
@@ -70,8 +70,8 @@
         </div>
       </div>
 
-      <div class="form-group">
-        <div class="col-sm-8 col-sm-offset-4 col-md-10 col-md-offset-2 text-right">
+      <div class="form-group row">
+        <div class="col-sm-8 offset-sm-4 col-md-10 offset-md-2 text-right">
           <button type="submit"
                   class="btn btn-primary"
                   ng-disabled="!canSubmit(editGroupForm, 'group')"
