--- a/webapps/frontend/ui/admin/client/scripts/pages/tenantCreate.html
+++ b/webapps/frontend/ui/admin/client/scripts/pages/tenantCreate.html
@@ -7,11 +7,11 @@
       </div>
     </header>
 
-    <form class="form-horizontal"
+    <form class="form-horizontal row"
           name="createTenantForm">
       <div class="col-sm-12">
-        <div class="form-group">
-          <label class="control-label col-sm-4 col-md-2"
+        <div class="form-group row">
+          <label class="control-label col-sm-4 col-md-2 text-right"
                  for="inputTenantId">{{ 'TENANTS_TENANT_ID' | translate }}</label>
 
           <div class="col-sm-8 col-md-10">
@@ -26,8 +26,8 @@
           </div>
         </div>
 
-        <div class="form-group">
-          <label class="control-label col-sm-4 col-md-2"
+        <div class="form-group row">
+          <label class="control-label col-sm-4 col-md-2 text-right"
                  for="inputName">{{ 'TENANTS_TENANT_NAME' | translate }}</label>
 
           <div class="col-sm-8 col-md-10">
@@ -42,8 +42,8 @@
           </div>
         </div>
 
-        <div class="form-group">
-          <div class="col-sm-8 col-sm-offset-4 col-md-10 col-md-offset-2 text-right">
+        <div class="form-group row">
+          <div class="col-sm-8 offset-sm-4 col-md-10 offset-md-2 text-right">
             <a class="btn btn-link"
                href="#/tenants">
               {{ 'TENANTS_CANCEL' | translate }}
