--- a/webapps/frontend/ui/admin/client/scripts/pages/tenantEdit.html
+++ b/webapps/frontend/ui/admin/client/scripts/pages/tenantEdit.html
@@ -22,8 +22,8 @@
           loading-state="{{ tenantLoadingState }}">
       <div class="h3">{{ tenant.name }}</div>
 
-      <div class="form-group">
-        <label class="control-label col-sm-4 col-md-2"
+      <div class="form-group row">
+        <label class="control-label col-sm-4 col-md-2 text-right"
                for="inputName">{{ 'TENANTS_TENANT_NAME' | translate }}</label>
 
         <div class="col-sm-8 col-md-10">
@@ -42,8 +42,8 @@
         </div>
       </div>
 
-      <div class="form-group">
-        <div class="col-sm-8 col-sm-offset-4 col-md-10 col-md-offset-2 text-right">
+      <div class="form-group row">
+        <div class="col-sm-8 offset-sm-4 col-md-10 offset-md-2 text-right">
           <button type="submit"
                   class="btn btn-primary"
                   ng-disabled="!canSubmit(editTenantForm, 'tenant')"
