--- a/webapps/frontend/ui/admin/client/scripts/pages/userCreate.html
+++ b/webapps/frontend/ui/admin/client/scripts/pages/userCreate.html
@@ -2,13 +2,13 @@
 <section ng-cloak>
   <!-- <aside></aside> -->
   <div class="section-content">
-    <form class="form-horizontal"
+    <form class="form-horizontal row"
           name="createUserForm">
-      <div class="col-xs-12">
+      <div class="col-12">
         <div class="h3">{{ 'USERS_USER_ACCOUNT' | translate }}</div>
 
-        <div class="form-group">
-          <label class="control-label col-sm-4 col-md-2"
+        <div class="form-group row">
+          <label class="control-label col-sm-4 col-md-2 text-right"
                  for="inputUserId">{{ 'USERS_USER_ID' | translate }}</label>
 
           <div class="col-sm-8 col-md-10">
@@ -27,8 +27,8 @@
           </div>
         </div>
 
-        <div class="form-group">
-          <label class="control-label col-sm-4 col-md-2"
+        <div class="form-group row">
+          <label class="control-label col-sm-4 col-md-2 text-right"
                  for="inputPassword">{{ 'USERS_PASSWORD' | translate }}</label>
 
           <div class="col-sm-8 col-md-10">
@@ -49,8 +49,8 @@
           </div>
         </div>
 
-        <div class="form-group">
-          <label class="control-label col-sm-4 col-md-2"
+        <div class="form-group row">
+          <label class="control-label col-sm-4 col-md-2 text-right"
                  for="inputPasswordRepeat">{{ 'USERS_PASSWORD_REPEAT' | translate }}</label>
 
           <div class="col-sm-8 col-md-10">
@@ -70,8 +70,8 @@
 
         <div class="h3">{{ 'USERS_USER_PROFILE' | translate }}</div>
 
-        <div class="form-group">
-          <label class="control-label col-sm-4 col-md-2"
+        <div class="form-group row">
+          <label class="control-label col-sm-4 col-md-2 text-right"
                  for="inputFirstname">{{ 'USERS_FIRSTNAME' | translate }}</label>
 
           <div class="col-sm-8 col-md-10">
@@ -90,8 +90,8 @@
           </div>
         </div>
 
-        <div class="form-group">
-          <label class="control-label col-sm-4 col-md-2"
+        <div class="form-group row">
+          <label class="control-label col-sm-4 col-md-2 text-right"
                  for="inputLastname">{{ 'USERS_LASTNAME' | translate }}</label>
 
           <div class="col-sm-8 col-md-10">
@@ -109,8 +109,8 @@
           </div>
         </div>
 
-        <div class="form-group">
-          <label class="control-label col-sm-4 col-md-2"
+        <div class="form-group row">
+          <label class="control-label col-sm-4 col-md-2 text-right"
               for="inputEmail">{{ 'USERS_EMAIL' | translate }}</label>
 
           <div class="col-sm-8 col-md-10">
@@ -128,8 +128,8 @@
           </div>
         </div>
 
-        <div class="form-group">
-          <div class="col-sm-8 col-sm-offset-4 col-md-10 col-md-offset-2 text-right">
+        <div class="form-group row">
+          <div class="col-sm-8 offset-sm-4 col-md-10 offset-sm-2 text-right">
             <a class="btn btn-link"
                href="#/users">{{ 'USERS_CANCEL' | translate }}</a>
 
