--- a/webapps/frontend/ui/cockpit/client/scripts/reports/directives/reports-type.html
+++ b/webapps/frontend/ui/cockpit/client/scripts/reports/directives/reports-type.html
@@ -1,5 +1,5 @@
 <!-- # CE - operaton-cockpit-ui/client/scripts/reports/directives/reports-type.html -->
-<section class="col-xs-12">
+<section class="col-12">
   <div class="inner">
     <header>
       <h1 class="section-title">{{ 'REPORTS_TYPE_AVAILABLE_REPORTS' | translate }}</h1>
