--- a/webapps/frontend/ui/tasklist/client/scripts/filter/directives/cam-tasklist-filter-modal-form-permission.html
+++ b/webapps/frontend/ui/tasklist/client/scripts/filter/directives/cam-tasklist-filter-modal-form-permission.html
@@ -19,42 +19,41 @@
       <span>{{ 'FILTER_FORM_PERMISSIONS_EDIT_HINT' | translate }}</span>
     </div>
 
-    <div class="global-access checkbox form-control-static"
+    <div class="global-access checkbox form-check"
          ng-show="!filter.id || (filter.id && accesses.update)">
-      <label>
         <input type="checkbox"
-               class="form-control"
+               class="form-check-input"
+               id="assignedTask"
                ng-model="isGlobalReadAuthorization"
                ng-change="globalReadAuthorizationChanged()"
                ng-disabled="filter.id && !accesses.update" />
-         {{ 'FILTER_FORM_PERMISSIONS_GLOBAL' | translate }}
-      </label>
+      {{ 'FILTER_FORM_PERMISSIONS_GLOBAL' | translate }}
     </div>
 
     <div class="user-read-permissions"
          ng-show="(!filter.id || (filter.id && accesses.update)) && !isGlobalReadAuthorization">
-      <div class="form-group labels-left">
-        <div class="col-xs-2 align-right">
-          <button class="btn btn-link"
+      <div class="form-group labels-left row align-items-center">
+        <div class="col-2 text-right">
+          <button class="btn btn-link p-0 d-inline-flex align-items-center"
                   ng-click="addReadPermission()"
                   type="button"
                   ng-disabled="disableAddButton()">
-            <span class="hidden-sm hidden-xs">{{ 'ADD_PERMISSION' | translate }}</span>
-            <span class="glyphicon glyphicon-plus-sign"></span>
+            <span class="d-none d-md-inline mr-1">{{ 'ADD_PERMISSION' | translate }}</span>
+            <span class="glyphicon glyphicon-plus-sign mt-0 align-middle"></span>
           </button>
         </div>
 
-        <label class="col-xs-2 control-label">
+        <label class="col-2 col-form-label m-0">
           {{ 'FILTER_FORM_PERMISSION_GROUP_USER' | translate }}
         </label>
-        <label class="col-xs-8 control-label">
+        <label class="col-8 col-form-label m-0">
           {{ 'FILTER_FORM_PERMISSION_IDENTIFIER' | translate }}
         </label>
       </div>
 
-      <div class="form-group"
+      <div class="form-group row"
            ng-repeat="auth in getReadAuthorizations(authorizations)">
-        <div class="col-xs-2 row-action"
+        <div class="col-2 row-action"
              ng-show="!filter.id || (filter.id && accesses.update)">
           <button class="btn btn-link btn-remove"
                   ng-if="!isGlobalReadAuthorization"
@@ -66,7 +65,7 @@
           </button>
         </div>
 
-        <div class="col-xs-2">
+        <div class="col-2">
           <span class="fake-button">
             <span class="glyphicon"
                   ng-class="'glyphicon-' + (!!auth.userId ? 'user' : 'th')"></span>
@@ -74,15 +73,15 @@
         </div>
 
         <div class="form-control-static"
-             ng-class="{ 'col-xs-8': !filter.id || (filter.id && accesses.update) , 'col-xs-10': !(!filter.id || (filter.id && accesses.update)) }">
+             ng-class="{ 'col-8': !filter.id || (filter.id && accesses.update) , 'col-10': !(!filter.id || (filter.id && accesses.update)) }">
 
           {{ (auth.userId || auth.groupId) }}
         </div>
       </div><!-- repeat auth -->
 
-      <div class="form-group new-permission"
+      <div class="form-group new-permission row"
            ng-if="showNewPermissionFields">
-        <div class="col-xs-2 col-xs-offset-2">
+        <div class="col-2 offset-2">
           <button class="btn btn-default"
                   type="button"
                   tooltip-append-to-body="false"
@@ -94,7 +93,7 @@
           </button>
         </div>
 
-        <div class="col-xs-8">
+        <div class="col-8">
           <input type="text"
                  name="newPermission"
                  placeholder="{{ (newPermission.type === 'user' ? 'FILTER_FORM_PERMISSIONS_USER_ID' : 'FILTER_FORM_PERMISSIONS_GROUP_ID') | translate }}"
