--- a/webapps/frontend/ui/tasklist/client/scripts/form/directives/cam-tasklist-form-generic-variables.html
+++ b/webapps/frontend/ui/tasklist/client/scripts/form/directives/cam-tasklist-form-generic-variables.html
@@ -1,12 +1,12 @@
 <form name="genericForm"
       class="form-horizontal">
 
-  <div class="form-group"
+  <div class="form-group row"
        ng-if="showBusinessKey">
     <label for="business-key-field"
            translate="BUSINESS_KEY"
-           class="control-label col-xs-2">Business key</label>
-    <div class="col-xs-10">
+           class="control-label col-2">Business key</label>
+    <div class="col-10">
       <input type="text"
             ng-readonly="readonly"
             ng-model="businessKey"
@@ -16,8 +16,8 @@
     </div>
   </div>
 
-  <div class="form-group labels-left">
-    <div class="col-xs-2 row-action">
+  <div class="form-group labels-left row">
+    <div class="col-2 row-action">
       <a href
          ng-click="addVariable()"
          ng-disabled="options.disableAddVariableButton">
@@ -29,20 +29,20 @@
 
 
 
-    <div class="col-xs-10"
+    <div class="col-10"
          ng-if="variables.length">
       <div class="row">
-        <label class="control-label col-xs-4"
+        <label class="control-label col-4"
                translate="NAME">Name</label>
 
 
 
-        <label class="control-label col-xs-4"
+        <label class="control-label col-4"
                translate="TYPE">Type</label>
 
 
 
-        <label class="control-label col-xs-4"
+        <label class="control-label col-4"
                translate="VALUE">Value</label>
       </div>
     </div>
@@ -52,10 +52,10 @@
 
   <div ng-if="variables.length"
        ng-repeat="(delta, variable) in variables"
-       class="form-group"
+       class="form-group row"
        ng-form="repeatForm">
 
-    <div class="col-xs-2 row-action">
+    <div class="col-2 row-action">
       <a href
          ng-click="removeVariable(delta)"
          ng-if="!variable.fixedName">
@@ -67,9 +67,9 @@
 
 
 
-    <div class="col-xs-10">
+    <div class="col-10">
       <div class="row">
-        <div class="col-xs-4">
+        <div class="col-4">
           <input required
                  type="text"
                  class="form-control"
@@ -92,7 +92,7 @@
 
 
 
-        <div class="col-xs-4">
+        <div class="col-4">
           <select ng-disabled="!variable.name || variable.readonly"
                   class="form-control"
                   ng-model="variable.type">
@@ -115,7 +115,7 @@
 
 
 
-        <div class="col-xs-4"
+        <div class="col-4"
              ng-switch="variable.type">
 
           <div ng-switch-when="Object">
@@ -204,7 +204,7 @@
   </div>
   <div class="form-group"
        ng-if="!options.hideLoadVariablesButton && !variablesLoaded">
-    <div class="col-xs-2 row-action">
+    <div class="col-2 row-action">
       <a href
          ng-click="loadVariables()">
         <span class="hidden-sm hidden-xs"
