--- a/webapps/frontend/ui/tasklist/client/scripts/shortcuts/plugins/action/modals/cam-tasklist-shortcut-help.html
+++ b/webapps/frontend/ui/tasklist/client/scripts/shortcuts/plugins/action/modals/cam-tasklist-shortcut-help.html
@@ -23,7 +23,7 @@
 
 <div class="modal-footer">
   <div class="row row-action">
-    <div class="col-xs-12">
+    <div class="col-12">
       <button class="btn btn-xs btn-link"
               type="button"
               ng-click="$dismiss()"
