--- a/webapps/frontend/ui/tasklist/client/scripts/task/modals/cam-tasklist-groups-modal.html
+++ b/webapps/frontend/ui/tasklist/client/scripts/task/modals/cam-tasklist-groups-modal.html
@@ -25,8 +25,8 @@
     {{ 'USE_ADD_GROUP' | translate }}
   </div>
 
-    <div class="form-group">
-      <div class="col-xs-4 align-right">
+    <div class="form-group row">
+      <div class="col-4 align-right">
         <button class="btn btn-link"
                 ng-click="addGroup()"
                 type="button"
@@ -36,7 +36,7 @@
         </button>
       </div>
 
-      <div class="col-xs-8"
+      <div class="col-8"
            ng-class="{'has-error': newGroup.error }">
         <input type="text"
                name="newGroup"
@@ -54,15 +54,15 @@
       </div>
     </div>
 
-    <div class="form-group values"
+    <div class="form-group values row"
          ng-repeat="group in _groups">
-      <div class="col-xs-4 row-action">
+      <div class="col-4 row-action">
         <a href
            ng-click="removeGroup(group, $index)"
-           class="glyphicon glyphicon-remove-sign"></a>
+           class="glyphicon glyphicon-remove"></a>
       </div>
 
-      <div class="col-xs-8 value">
+      <div class="col-8 value">
         {{ group.id }}
       </div>
     </div>
@@ -73,7 +73,7 @@
 
 <div class="modal-footer">
   <div class="row row-action">
-    <div class="col-xs-12">
+    <div class="col-12">
       <button class="btn btn-xs btn-link"
               type="button"
               ng-click="$dismiss()"
