--- a/webapps/frontend/ui/welcome/client/scripts/directives/custom-links.html
+++ b/webapps/frontend/ui/welcome/client/scripts/directives/custom-links.html
@@ -3,7 +3,7 @@
   <h3 class="section-title">{{'LINKS' | translate}}</h3>
   <div class="row">
     <div ng-repeat="link in links"
-         class="col-xs-6 col-md-4 custom-link-wrapper">
+         class="col-6 col-md-4 custom-link-wrapper">
       <a ng-href="{{ link.href }}">
         <span class="h4">{{ link.label | translate }}</span>
       </a>
